# SimpleWebServer

./: .gitignore  CMakeLists.txt  echo_server  note.md  readme.md
include/: Acceptor.h  Activater.h  Buffer.h  Channel.h  Connector.h  EventLoop.h  EventloopPool.h  InetAddress.h  Logger.h  Poller.h  Socket.h  TcpClient.h  TcpConnection.h  TcpServer.h  ThreadEventloop.h  ThreadPoolEventloop.h  Timer.h  TimerQueue.h  base.h  type.h
lib/easyloggingpp/src/: easyloggingpp.cpp
src/base/: Buffer.cpp  Buffer.hpp  InetAddress.cpp  Logger.cpp  Socket.cpp  Timer.cpp  base.cpp  base.hpp  sys_call..cpp  sys_call.hpp
src/co/: Coroutine.cpp  Coroutine.hpp  co_fun.cpp  co_fun.hpp  co_swap.s  note.md
src/http/: HTTPMessageParser.cpp  HTTPMessageParser.hpp  HTTPServer.hpp  HTTPServer2.cpp  HTTPServer2.hpp  http_parser.hpp  http_user.hpp  note.md
src/logger/: Logger.cpp  Logger.hpp
src/reactor/: Activater.cpp  Activater.hpp  Channel.cpp  EventLoop.cpp  EventLoopPolo.cpp  EventLoopPool.cpp  EventLoopPool.hpp  Eventloop.hpp  EventloopPool.cpp  Logger.cpp  Poller.cpp  Poller.hpp  TimerQueue.cpp  TimerQueue.hpp  TimerSchedulerAdapter.cpp  TimerSchedulerAdapter.hpp  note.md
src/tcp/: Acceptor.cpp  Buffer.cpp  Buffer.hpp  Connector.cpp  EventLoopThreadPool.cpp  TCPAcceptor.cpp  TCPAcceptor.hpp  TCPClient.hpp  TCPConnection.hpp  TCPConnector.cpp  TCPConnector.hpp  TCPServer.hpp  TCPServer2.cpp  TCPServer2.hpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  ThreadEventloop.cpp  note. d  tcp_fun.hpp  tcp_user.hpp
src/timer/: TimerScheduler.cpp  TimerScheduler.hpp
test/: test2.cpp  test_Eventloop.cpp  test_TcpClient.cpp  test_TcpServer.cpp  test_ThreadEventloop.cpp  test_client.cpp  test_logger.cpp  test_loop.cpp  test_other  test_other.cpp  test_server.cpp
test/co/: test.cpp
test/co/lib_piling/: main.c  mymalloc.c  run.sh
test/example/: crtp  crtp.cpp  epoll  epoll.cpp  object  object.cpp
test/http/: example_get.txt  example_get2.txt  example_post.txt  example_reponse.txt  example_response.txt  http_parser.hpp  note.md  test  test.cpp
test/log/: Logger.hpp  blockqueue.cpp  note.md  other  other.cpp  test
test/logger/: test.cpp
test/old/: test2  test2.cpp  test_client.cpp  test_loop.cpp  test_server.cpp  test_simple_echo  test_simple_echo.cpp
test/old/example/: pimpl.cpp  polymorphism
test/other/: a  a.c  a.cpp  b  b.cpp  echo  echo.cpp
test/reactor/: test.cpp
test/tcp/: test.cpp
test/timer/: a.cpp  a.out  test.cpp
